# CAE-Robotic-System-Ins-Automation

./: .gitignore  README.md
hardware/electronics/Firmware/mobile_robot_fw/: platformio.ini
hardware/mechanical/cad/: beginner_tutorial.20260108-085805.FCBak  beginner_tutorial.20260110-092609.FCBak  beginner_tutorial.FCStd
simulation/balancing_robot/: GPT_pid_tuning.py  dinamics_3d.py  dynamics.py  params.py  pid_controller.py  pid_controller_x.py  pid_tuning.py  simulate_closed_loop.py  simulate_closed_loop_x.py  simulate_open_loop.py
src_public/balancing_robot/: CMakeLists.txt  package.xml
src_public/balancing_robot/balancing_robot_control/: CMakeLists.txt  package.xml
src_public/balancing_robot/balancing_robot_control/src/: balancing_robot_pid.cpp
src_public/balancing_robot/balancing_robot_description/: CMakeLists.txt  package.xml
src_public/balancing_robot/balancing_robot_description/launch/: display.launch.py
src_public/balancing_robot/launch/: display.launch.py
src_public/mobile_robot/mobile_robot_bringup/: CMakeLists.txt  package.xml
src_public/mobile_robot/mobile_robot_description/: CMakeLists.txt  package.xml
src_public/mobile_robot/mobile_robot_manager/: CMakeLists.txt  package.xml
src_public/mobile_robot/mobile_robot_monitor/: CMakeLists.txt  package.xml
src_public/mobile_robot/mobile_robot_teleop/: package.xml  setup.py
src_public/mobile_robot/mobile_robot_teleop/config/: teleop_joy.yaml  teleop_keyboard.yaml
src_public/mobile_robot/mobile_robot_teleop/launch/: mobile_robot_keyboard.launch.py  mobile_robot_teleop.launch.py
(+20 files in other folders)
