<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot_teleop</name>
  <version>0.0.0</version>
  <description>Mobile robot teleoperation control</description>
  <maintainer email="JayCCarrasco@users.noreply.github.com">juancarlos</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>joy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
